--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -22,6 +22,8 @@ jobs:
     
     - name: Install dependencies
       run: |
+        python${{ matrix.python-version }} -m venv env
+        source env/bin/activate
         python -m pip install --upgrade pip setuptools
         python -m pip install ".[dev]"
     
