--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -43,10 +43,10 @@ jobs:
       run: |
         source env/bin/activate
         safety check
-    - name: "Test: pytest"
-      run: |
-        source env/bin/activate
-        py.test --verbose
+    # - name: "Test: pytest"
+    #   run: |
+    #     source env/bin/activate
+    #     py.test --verbose
     - name: "Test: coverage"
       run: |
         source env/bin/activate
