--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -47,10 +47,10 @@ jobs:
     #   run: |
     #     source env/bin/activate
     #     py.test --verbose
-    - name: "Test: coverage"
-      run: |
-        source env/bin/activate
-        pytest --cov which_plates
+    # - name: "Test: coverage"
+    #   run: |
+    #     source env/bin/activate
+    #     pytest --cov which_plates
     - name: Build package
       run: |
         source env/bin/activate
