--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,7 @@
-name: Develop
+name: Test, Build, Publish
 
 on: 
   push:
-    branches-ignore:
-      - 'main'
   pull_request:
 
 jobs:
@@ -69,3 +67,9 @@ jobs:
       with:
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
         repository_url: https://test.pypi.org/legacy/
+
+    - name: Publish distribution to PyPI
+      uses: pypa/gh-action-pypi-publish@v1.6.4
+      if: github.repository == 'iandday/whichPlates' && matrix.python-version == '3.10' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}
