--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
-name: Test, Build, Publish
+name: "Test, Build, Publish: Develop"
 
 on: 
   push:
   pull_request:
 
 jobs:
-  build:
+  build_test_publish:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -67,16 +67,52 @@ jobs:
         name: which_plates
         path: dist/
 
-    - name: Publish distribution to Test PyPI
-      uses: pypa/gh-action-pypi-publish@v1.6.4
-      if: github.repository == 'iandday/whichPlates' && matrix.python-version == '3.10'
-      continue-on-error: true
-      with:
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/legacy/
-
     - name: Publish distribution to PyPI
       uses: pypa/gh-action-pypi-publish@v1.6.4
       if: github.repository == 'iandday/whichPlates' && matrix.python-version == '3.10' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
+  update_coverage_on_readme:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+          fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+    
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4.5.0
+        with:
+          python-version: ${{ matrix.python-version }}
+      
+      - name: Install dependencies
+        run: |
+          python${{ matrix.python-version }} -m venv env
+          source env/bin/activate
+          python -m pip install --upgrade pip setuptools
+          python -m pip install ".[dev]"`
+
+      - name: "Test: pytest"
+        run: |
+          source env/bin/activate
+          pytest --cov which_plates --junitxml=pytest.xml --cov-report=term-missing:skip-covered src/which_plates/tests/ | tee pytest-coverage.txt
+      
+      - name: Pytest coverage comment
+        if: ${{ github.ref == 'refs/heads/main' }}
+        id: coverageComment
+        uses: MishaKav/pytest-coverage-comment@main
+        with:
+          hide-comment: true
+          pytest-coverage-path: ./pytest-coverage.txt
+
+      - name: Update Readme with Coverage Html
+        if: ${{ github.ref == 'refs/heads/main' }}
+        run: |
+          sed -i '/<!-- Pytest Coverage Comment:Begin -->/,/<!-- Pytest Coverage Comment:End -->/c\<!-- Pytest Coverage Comment:Begin -->\n\${{ steps.coverageComment.outputs.coverageHtml }}\n<!-- Pytest Coverage Comment:End -->' ./README.md
+
+      - name: Commit & Push changes to Readme
+        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: actions-js/push@master
+        with:
+          message: Update coverage on Readme
+          github_token: ${{ secrets.PERSONAL_TOKEN }}
