--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -2,7 +2,11 @@ name: "Test, Build, Publish: Develop"
 
 on: 
   push:
+    branches:
+      - develop
   pull_request:
+    branches:
+      - develop
 
 jobs:
   build:
