--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,7 @@ jobs:
       if: github.repository == 'iandday/whichPlates' && matrix.python-version == '3.10' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
+  
   update_coverage_on_readme:
     runs-on: ubuntu-latest
     steps:
@@ -84,14 +85,14 @@ jobs:
           persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
           fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
     
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4.5.0
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.10
       
       - name: Install dependencies
         run: |
-          python${{ matrix.python-version }} -m venv env
+          python3.10 -m venv env
           source env/bin/activate
           python -m pip install --upgrade pip setuptools
           python -m pip install ".[dev]"`
