--- a/.github/workflows/update_coverage.yml
+++ b/.github/workflows/update_coverage.yml
@@ -24,7 +24,7 @@ jobs:
             python3.10 -m venv env
             source env/bin/activate
             python -m pip install --upgrade pip setuptools
-            python -m pip install ".[dev]"`
+            python -m pip install ".[dev]"
 
         - name: "Test: pytest"
           run: |
