--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,11 @@ black = "^23.3.0"
 flake8 = "^6.0.0"
 mypy = "^1.2.0"
 
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.3.0"
+pytest-cov = "^4.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
@@ -51,3 +56,15 @@ warn_return_any = false
 warn_unreachable = true
 # Misc
 pretty = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = "-p no:cacheprovider" # deactivating pytest caching.
+
+[tool.coverage.report]
+exclude_lines = [
+    'if __name__ == "__main__":',
+    'def __repr__',
+    'def __str__',
+    'raise NotImplementedError'
+]
