--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,12 @@ mypy = "^1.2.0"
 pytest = "^7.3.0"
 pytest-cov = "^4.0.0"
 
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.4.2"
+mkdocs-material = "^9.1.6"
+mkdocstrings = {extras = ["python"], version = "^0.21.2"}
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
@@ -58,7 +64,7 @@ warn_unreachable = true
 pretty = true
 
 [tool.pytest.ini_options]
-testpaths = ["tests"]
+testpaths = ["src", "tests"]
 addopts = "-p no:cacheprovider" # deactivating pytest caching.
 
 [tool.coverage.report]
