--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install requirements
         run: poetry install
       - name: Build package
-        run: python -m build
+        run: poetry build
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@v1.6.4
         if: github.repository == 'iandday/whichPlates' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
