--- a/.github/workflows/orchestrator.yml
+++ b/.github/workflows/orchestrator.yml
@@ -24,5 +24,6 @@ jobs:
     name: Publish
     needs:
       - call-release-pipeline
+    if: github.ref == 'refs/heads/main'
     uses: ./.github/workflows/publish.yml
     secrets: inherit
