--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,6 +33,6 @@ jobs:
         run: poetry build
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@v1.6.4
-        if: github.repository == 'iandday/whichPlates' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        if: github.repository == 'iandday/whichPlates' && github.event_name == 'push')
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
